[package]
name = "serde_titan-quest"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = "0.2.3"
encoding = "0.2.33"
enum-ordinalize = "3.1.8"
miniz_oxide = "0.4.0"
raw-seeders = { path = "../raw-seeders" }
serde = { version = "1.0.115", features = ["derive"] }
serde_raw = { path = "../serde_raw" }
serde-seeded = { path = "../serde-seeded" }
wyz = "0.2.0"

[dev-dependencies]
serde-backtrace = { path = "../serde-backtrace" }
test-case = "1.0.0"
